# buttercup

./: .gitignore  Cargo.toml  README.md  dep.txt
buttercup_macros/: Cargo.toml
buttercup_macros/src/: address.rs  conditions.rs  lib.rs
buttercup_macros/src/conditions/: relational.rs
src/: app.rs  arguments.rs  behavior.rs  builder.rs  endpoints.rs  html_test_utils.rs  main.rs  test_utils.rs  transformations.rs  values.rs
src/agents/: Cargo.toml
src/agents/src/: core.rs  lib.rs  service.rs
src/api/: Cargo.toml
src/api/src/: lib.rs
src/api/src/bts/: definitions.rs  mod.rs
src/api/src/bts/action/: logging.rs  mod.rs  subtree.rs  wait.rs
src/api/src/bts/composite/: fallback.rs  mod.rs  parallel.rs  sequence.rs
src/api/src/bts/decorator/: condition.rs  invert.rs  mod.rs  reactive.rs
src/api/src/bts/root/: mod.rs
src/api/tests/: basic.rs  common.rs  composite.rs  decorator.rs  serde.rs  subtrees.rs  trivial.rs
src/app/: address.rs  agents.rs  arguments.rs  behavior.rs  blackboards.rs  common.rs  conditions.rs  content.rs  decision.rs  files.rs  pipeline.rs  projects.rs  reinforcement.rs  selection.rs  transformations.rs  values.rs  variables.rs
src/app/agents/: core.rs
src/app/arguments/: definition.rs  extraction.rs  extractors.rs  provider.rs
src/app/arguments/extractors/: boolean.rs  geolocation.rs  number.rs  string.rs
src/app/arguments/extractors/date_time/: day_of_week.rs  local.rs  zoned.rs
src/app/behavior/: configuration.rs  context.rs  node.rs  tick.rs  tree.rs
src/app/behavior/context/: reactive.rs
src/app/behavior/node/: action.rs  composite.rs  decorator.rs
src/app/behavior/node/action/: logging.rs  wait.rs
src/app/behavior/node/composite/: fallback.rs  parallel.rs  selector.rs  sequence.rs
src/app/behavior/node/decorator/: condition.rs  invert.rs  reactive.rs
src/app/blackboards/: core.rs  service.rs
src/app/bts/: node.rs
src/app/bts/node/: decorator.rs  leaf.rs
src/app/common/: addressable.rs  time.rs
src/app/conditions/: relational.rs  value.rs
src/app/content/: commands.rs  definitions.rs  responses.rs  video.rs
src/app/content/commands/: html.rs  video.rs
src/app/content/commands/html/: template.rs
src/app/content/commands/html/template/: builder.rs
src/app/content/video/: append.rs  sources.rs
src/app/execution/: service.rs
src/app/files/: naming.rs  path.rs
src/app/pipeline/: core.rs  definitions.rs  evaluation.rs  request.rs  response.rs
src/app/pipeline/evaluation/: cache.rs
src/app/selection/: addressable.rs  edges.rs  nodes.rs  tree.rs
src/app/selection/edges/: always.rs  conditions.rs  logical.rs  operators.rs
src/app/selection/edges/logical/: conditions.rs  expressions.rs  operators.rs
src/app/selection/edges/logical/operators/: strings.rs
src/app/selection/edges/operators/: strings.rs
src/app/selection/nodes/: context.rs  dictionary.rs  recommendation.rs  simple.rs
src/app/selection/nodes/context/: recommendation.rs
src/app/selection/nodes/recommendation/: beta_bandits.rs  response.rs
src/app/selection/tree/: decision.rs  evaluation.rs
src/app/transformations/: di.rs  mono.rs  transformer.rs
src/app/transformations/di/: astro.rs  local_to_zoned.rs
src/app/transformations/di/astro/: sun_position.rs
src/app/transformations/mono/: day_of_week.rs  geolocation.rs
src/app/values/: email.rs  extractors.rs  geolocation.rs  lists.rs  wrappers.rs  zoned_date_time.rs
src/app/values/extractors/: boolean.rs  country.rs  date_time.rs  email.rs  geolocation.rs  ip.rs  language.rs  lists.rs  number.rs  string.rs
src/app/values/extractors/date_time/: day_of_week.rs  local.rs  zoned.rs
src/arguments/: definition.rs  description.rs  extractors.rs  transformers.rs  values.rs
src/arguments/extractors/: boolean.rs  date_time.rs  geolocation.rs  number.rs  string.rs
src/arguments/extractors/date_time/: day_of_week.rs  local.rs  zoned.rs
src/blackboards/: Cargo.toml
src/blackboards/src/: definitions.rs  lib.rs  service.rs
src/bts/: Cargo.toml
src/bts/src/: context.rs  lib.rs  node.rs  tick.rs  tree.rs
src/bts/src/context/: reactive.rs
src/bts/src/definitions/: mod.rs
src/bts/src/events/: mod.rs
src/bts/src/node/: action.rs  composite.rs  decorator.rs  root.rs
src/bts/src/node/action/: logging.rs  subtree.rs  wait.rs
src/bts/src/node/composite/: fallback.rs  parallel.rs  sequence.rs
src/bts/src/node/decorator/: condition.rs  invert.rs  reactive.rs
src/bts/src/node/root/: one_off.rs  reactive.rs  to_first.rs  to_first_fail.rs  until_stopped.rs
src/conditions/: Cargo.toml
src/conditions/src/: lib.rs  relational.rs
src/conditions/src/macros/: Cargo.toml
src/conditions/src/macros/src/: lib.rs
src/endpoints/: Cargo.toml
src/endpoints/src/: endpoints.rs  extraction.rs  lib.rs
src/transformations/: Cargo.toml  astro.rs  bi.rs  date_time.rs  di.rs  geolocation.rs  mono.rs  transformer.rs
src/transformations/astro/: sun_position.rs
src/transformations/bi/: astro.rs  local_to_zoned.rs
src/transformations/di/: astro.rs  local_to_zoned.rs
src/transformations/mono/: day_of_week.rs  geolocation.rs
src/transformations/src/: di.rs  lib.rs  mono.rs  transformer.rs
src/transformations/src/di/: astro.rs  local_to_zoned.rs
src/transformations/src/di/astro/: sun_position.rs
src/transformations/src/mono/: day_of_week.rs  geolocation.rs
src/values/: Cargo.toml  geolocation.rs  transformations.rs  zoned_date_time.rs
src/values/src/: extractors.rs  lib.rs  lists.rs  wrappers.rs  zoned_date_time.rs
src/values/src/extractors/: boolean.rs  country.rs  date_time.rs  email.rs  geolocation.rs  ip.rs  language.rs  lists.rs  number.rs  string.rs
src/values/src/extractors/date_time/: day_of_week.rs  duration.rs  local.rs  zoned.rs
src/values/transformations/: astro.rs  date_time.rs  sun_position.rs  time_of_day.rs
src/values/transformations/astro/: sun_position.rs
src/variables/: Cargo.toml
src/variables/src/: lib.rs  specification.rs
