[package]
name = "buttercup"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

[workspace]
members = [
    "src/agents",
    "src/blackboards",
    "src/bts",
    "src/conditions",
    "src/conditions/src/macros",
    "src/endpoints",
    "src/transformations",
    "src/values",
    "src/variables",
]

[dependencies]
actix = "0.9.0"
actix-rt = "1.1"
actix-web = "3.0.0"
buttercup_agents = { path = "src/agents" }
buttercup_blackboards = { path = "src/blackboards" }
buttercup_bts = { path = "src/bts" }
buttercup_conditions = { path = "src/conditions" }
buttercup_endpoints = { path = "src/endpoints" }
buttercup_values = { path = "src/values" }
env_logger = "0.7.1"
dashmap = "3.11"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
