[package]
name = "buttercup_agents"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-rt = "2.2"
buttercup_blackboards = { path = "../blackboards" }
buttercup_bts = { path = "../bts" }
buttercup_endpoints = { path = "../endpoints" }
chrono = {version = "0.4", features = ["serde"]}
dashmap = "3.11"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.*", features = ["derive"] }
tokio = { version = "1.2", features = ["rt-multi-thread"]}