[package]
name = "buttercup_api"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttercup_bts = { path = "../bts" }
buttercup_conditions = { path = "../conditions" }
buttercup_variables = { path = "../variables" }
dashmap = "4"