[package]
name = "buttercup_blackboards"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
buttercup_values = {path = "../values"}
dashmap = "3.11"
lazy_static = "1"
rocksdb = "0.19"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
