[package]
name = "buttercup_bts"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"


[dependencies]
actix = "0.9"
actix-rt = "1"
actix-web = "3.0.0"
async-std = "1"
async-trait = "0.1"
buttercup_blackboards = { path = "../blackboards" }
buttercup_conditions = { path = "../conditions" }
buttercup_values = { path = "../values" }
buttercup_variables = { path = "../variables" }
dashmap = "3.11"
derivative = "2"
futures = "0.3"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
uuid = { version = "0.8", features = ["serde", "v4"] }