[package]
name = "buttercup_bts"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"


[dependencies]
actix = "0.12"
actix-rt = "2.2"
async-std = "1"
async-trait = "0.1"
buttercup_blackboards = { path = "../blackboards" }
buttercup_conditions = { path = "../conditions" }
buttercup_endpoints = { path = "../endpoints" }
buttercup_values = { path = "../values" }
buttercup_variables = { path = "../variables" }
chrono = {version = "0.4", features = ["serde"]}
dashmap = "4"
derivative = "2"
futures = "0.3"
log = "0.4"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
uuid = { version = "0.8", features = ["serde", "v4"] }