[package]
name = "buttercup_conditions"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

[dependencies]
buttercup_conditions_macros = { path = "src/macros" }
buttercup_values = {path = "../values"}
lazy_static = "1"

[dev-dependencies]
num = {version="0.2.*", features = ["serde"]}
num-rational = "0.2"