[package]
name = "buttercup_endpoints"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "2"
buttercup_blackboards = { path = "../blackboards" }
buttercup_values = { path = "../values" }
dashmap = "4"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
uuid = { version = "0.8", features = ["serde", "v4"] }