[package]
name = "buttercup_transformations"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

[dependencies]
buttercup_values = { path = "../values" }
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = {version ="0.5", features = ["serde"]}
serde = { version = "1.0.*", features = ["derive"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
strum = "0.18.0"
strum_macros = "0.18.0"
sunrise = "1.0.0"
tz-search = "0.1"