[package]
name = "buttercup_values"
version = "0.1.0"
authors = ["Przemyslaw Gliniecki <pgliniecki@protonmail.ch>"]
edition = "2018"

[dependencies]
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = {version ="0.5", features = ["serde"]}
isocountry = "0.2"
isolang = {version = "1", features = ["serde_serialize"]}
fast_chemail = "0.9"
lazy_static = "1"
num = {version="0.2.*", features = ["serde"]}
num-rational = "0.2"
publicsuffix = "1.5"
serde = { version = "1.0.*", features = ["derive", "rc"] }
serde_json = {version = "1.*", features = ["preserve_order"]}
strum = "0.18.0"
strum_macros = "0.18.0"
tz-search = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2"